style.css
/* ... */
#s1slider {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    height: 100%;
    overflow: scroll;
    background-color: #6969c4;
}

.s1slides {
    width: 100%;
    object-fit: contain;
}

#homevideo {
    display: none;
}

#homevideo header {
    justify-content: flex-end;
    height: 3vh;
}

#homevideo video {
    width: 100%;
}

#s2 {
    height: 45vh;
    background-color: #6969c4;
    margin-top: 5px;
    display: flex;
    flex-direction: column;
    align-content: center;
    padding: 10%;
}

#s2img {
    background-image: url(IMG/portrait_ch1.png);
    background-repeat: no-repeat;
    background-size: contain;
}

#s3 {
    height: 35vh;
    background-color: #6969c4;
    margin-top: 5px;
    display: flex;
    flex-direction: column;
    align-content: flex-end;
    padding: 10%;
}

#s3img {
    width: 100%;
    height: 100%;
    background-image: url(IMG/demo_thumbnail.png);
    background-repeat: no-repeat;
    background-size: contain;
    margin: auto;
}

.picplaceholder {
    width: 100%;
    height: 80%;
}

button {
    background-color: #b3b3f4;
    margin-top: 5px;
    height: 7vh;
    width: 100%;
}

#s4 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(2, 1fr);
    background-color: #6969c4;
    margin-top: 5px;
    gap: 15px;
    padding: 15px;
    height: 35vh;
}

#s4img {
    background-image: url(IMG/comic_thumbnail.png);
    background-repeat: no-repeat;
    background-size: contain;   
}

#s4 aside {
    display: flex;
    grid-column: 1/3;
    grid-row: 1/3;
}

#s4 button {
    margin-top: 25vh;
    grid-column: 1/3;
}

#s4 .picplaceholder {
    width: 60%;
    margin-right: 10px;
    height: 26vh;
}

#s4 p {
    width: 40%;
    height: 24vh;
    overflow: scroll;
}


#s5 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(3, 1fr);
    background-color: #6969c4;
    margin-top: 5px;
    gap: 15px;
    padding: 15px;
    height: 25vh;
}

#s5img {
    background-image: url(IMG/characters_tumbnail.png);
    background-repeat: no-repeat;
    background-size: contain;
    grid-column: 1/2;
    grid-row: 1/3;
    width: 100%;
    height: 100%;
}

#s6 {
    display: flex;
    flex-direction: column;
    align-content: space-evenly;
    align-items: center;
    background-color: #6969c4;
    margin-top: 5px;
    padding: 15px;
    height: 40vh;
    gap: 15px;
}

#s6img {
    background-image: url(IMG/blog.png);
    background-repeat: no-repeat;
    background-size: contain;
    width: 100%;
    height: 100%;
}

#ch-select {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 15px;
    margin-top: 5px;
    background-color: #6969c4;
    padding: 65px;
}

.charaicon {
    width: 21vw;
    height: 10vh;
    margin: 0 auto;
}

.charaicon:hover {
    cursor: pointer;
}

#ch1 {
    background-image: url(IMG/ch1.png);
    background-repeat: no-repeat;
    background-size: contain;
}

#ch2 {
    background-image: url(IMG/ch2.png);
    background-repeat: no-repeat;
    background-size: contain;
}

#ch3 {
    background-image: url(IMG/ch3.png);
    background-repeat: no-repeat;
    background-size: contain;
}

#ch4 {
    background-image: url(IMG/ch4.svg);
    background-repeat: no-repeat;
    background-size: contain;
}

#ch5 {
    background-image: url(IMG/ch5.svg);
    background-repeat: no-repeat;
    background-size: contain;
}

#ch6 {
    background-image: url(IMG/ch6.svg);
    background-repeat: no-repeat;
    background-size: contain;
}


#ch_holder {
    background-color: #6969c4;
    margin-top: 5px;
    height: 93vh;
    text-align: center;
    padding: 20px;
    position: relative;
    overflow: scroll;
}

.ch-popup {
    background-color: #6969c4;
    width: 90.5%;
    margin-top: 5px;
    height: 80vh;
    text-align: center;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    object-fit: contain;
}

.ch-popup p {
    text-align: left;
}

.ch_portrait {
    width: 59vw;
    height: 23vh;
}

#ch_img1 {
    background-image: url(IMG/portrait_ch1.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#ch_img2 {
    background-image: url(IMG/portrait_ch2.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#ch_img3 {
    background-image: url(IMG/portrait_ch3.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#ch_img4 {
    background-image: url(IMG/portrait_ch4.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#ch_img5 {
    background-image: url(IMG/portrait_ch5.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#ch_img6 {
    background-image: url(IMG/portrait_ch6.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#ep-box {
    display: none;
    margin: 0;
    background-color: #b3b3f4;
    padding: 20px;
}

#page_holder {
    background-color: #6969c4;
    margin-top: 5px;
}

#pagescroll {
    overflow: scroll;
    height: 95vh;
}

.chapters {
    padding: 10px;
    background-color: #6969c4;
}

.pages {
    height: 88vh;
    width: 90%;
    margin: 0 auto;
}

#page0 {
    background-image: url(IMG/WARNINGSpage.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#page1 {
    background-image: url(IMG/page1.png);
    background-size: contain;
    background-repeat: no-repeat;
}

.titles {
    text-align: center;
    align-content: center;
}

#controller {
    padding: 20px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

#prev {
    width: 10vw;
    height: 5vh;
    background-image: url(IMG/arrow_left.svg);
    background-repeat: no-repeat;
    background-size: cover;
}

#HOME {
    width: 10vw;
    height: 5vh;
    background-image: url(IMG/home.svg);
    background-repeat: no-repeat;
    background-size: cover;
}
/* ... */

